chore: change name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "portfolio",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "anoriqq's portfolio blog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "anoriqq <shota.yoshikawa@anoriqq.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/anoriqq/portfolio/issues"
   },
   "dependencies": {
     "gatsby": "^2.20.25",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "prettier": "2.0.4"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/anoriqq/portfolio#readme",
   "keywords": [
     "gatsby"
   ],
@@ -46,7 +46,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/anoriqq/portfolio.git"
   },
   "scripts": {
     "build": "gatsby build",
