--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,13 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
-    "lib": [
-      "dom"
-    ],
+    "lib": ["dom"],
     "jsx": "preserve",
     "moduleResolution": "node",
     "allowJs": true,
-    "outDir": "./build"
+    "outDir": "./build",
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*",
-  ],
-  "exclude": [
-    "node_modules",
-    "./@types"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "./@types"]
 }
