--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,9 @@
     "moduleResolution": "node",
     "allowJs": true,
     "outDir": "./build",
+    "strict": false,
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "./@types"]
+  "exclude": ["node_modules", "public", ".cache", "@types"]
 }
