--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,15 @@
     "allowJs": true,
     "outDir": "./build",
     "strict": false,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "typeRoots": [
+      "./node_modules/@types/",
+      "./@types/"
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "*": ["*"],
+    }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "public", ".cache", "@types"]
