--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-google-analytics": "2.2.4",
     "gatsby-plugin-manifest": "2.3.5",
     "gatsby-plugin-offline": "3.1.4",
-    "gatsby-plugin-react-helmet": "3.2.4",
+    "gatsby-plugin-react-helmet": "3.3.0",
     "gatsby-plugin-sharp": "2.5.6",
     "gatsby-plugin-ts": "2.7.1",
     "gatsby-plugin-typography": "2.4.3",
@@ -29,7 +29,7 @@
     "prismjs": "1.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1",
+    "react-helmet": "6.0.0",
     "react-typography": "0.16.19",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
@@ -41,6 +41,7 @@
     "@types/node": "13.13.4",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
+    "@types/react-helmet": "5.0.15",
     "@types/vfile-message": "2.0.0",
     "prettier": "2.0.4"
   },
