--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
 {
   "compilerOptions": {
+    /* Basic Options */
     "target": "ES2018",
     "module": "ESNext",
-    "lib": ["dom"],
+    "lib": ["dom", "ES2018", "ESNext"],
     "jsx": "preserve",
     "moduleResolution": "node",
     "allowJs": true,
     "outDir": "./build",
-    "strict": false,
     "allowSyntheticDefaultImports": true,
-    "typeRoots": [
-      "./node_modules/@types/",
-      "./@types/"
-    ],
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./@types"],
     "baseUrl": ".",
     "paths": {
-      "*": ["*"],
-    }
+      "*": ["*"]
+    },
+    "skipLibCheck": true,
+
+    /* Strict Type-Checking Options */
+    "strict": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "public", ".cache", "@types"]
+  "exclude": ["./node_modules", "./public", "./.cache", "./@types"]
 }
