--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/anoriqq/portfolio/issues"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "2.20.25",
     "gatsby-image": "2.3.4",
     "gatsby-plugin-feed": "2.4.3",
@@ -16,6 +17,7 @@
     "gatsby-plugin-offline": "3.1.4",
     "gatsby-plugin-react-helmet": "3.3.0",
     "gatsby-plugin-sharp": "2.5.6",
+    "gatsby-plugin-styled-components": "^3.3.0",
     "gatsby-plugin-ts": "2.7.1",
     "gatsby-plugin-typography": "2.4.3",
     "gatsby-remark-copy-linked-files": "2.2.3",
@@ -26,11 +28,14 @@
     "gatsby-source-filesystem": "2.2.4",
     "gatsby-transformer-remark": "2.7.3",
     "gatsby-transformer-sharp": "2.4.6",
+    "graphql": "14.6.0",
     "prismjs": "1.20.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.0.0",
+    "react-is": "^16.13.1",
     "react-typography": "0.16.19",
+    "styled-components": "^5.1.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typescript": "3.8.3",
@@ -42,6 +47,7 @@
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/react-helmet": "5.0.15",
+    "@types/styled-components": "^5.1.0",
     "@types/vfile-message": "2.0.0",
     "prettier": "2.0.4"
   },
