--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-remark-responsive-iframe": "2.3.3",
     "gatsby-remark-smartypants": "2.2.3",
     "gatsby-source-filesystem": "2.2.4",
+    "gatsby-styled-components-dark-mode": "^1.1.1",
     "gatsby-transformer-remark": "2.7.3",
     "gatsby-transformer-sharp": "2.4.6",
     "graphql": "14.6.0",
@@ -36,6 +37,7 @@
     "react-is": "^16.13.1",
     "react-typography": "0.16.19",
     "styled-components": "^5.1.0",
+    "ts-node": "^8.9.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typescript": "3.8.3",
