--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-styled-components": "1.10.7",
     "gatsby": "2.21.6",
     "gatsby-image": "2.4.0",
     "gatsby-plugin-feed": "2.5.0",
@@ -36,7 +36,7 @@
     "gatsby-plugin-offline": "3.2.0",
     "gatsby-plugin-react-helmet": "3.3.0",
     "gatsby-plugin-sharp": "2.6.0",
-    "gatsby-plugin-styled-components": "^3.3.0",
+    "gatsby-plugin-styled-components": "3.3.0",
     "gatsby-plugin-ts": "2.7.1",
     "gatsby-plugin-typography": "2.5.0",
     "gatsby-remark-copy-linked-files": "2.3.1",
@@ -45,7 +45,7 @@
     "gatsby-remark-responsive-iframe": "2.4.1",
     "gatsby-remark-smartypants": "2.3.0",
     "gatsby-source-filesystem": "2.3.0",
-    "gatsby-styled-components-dark-mode": "^1.1.1",
+    "gatsby-styled-components-dark-mode": "1.1.1",
     "gatsby-transformer-remark": "2.8.3",
     "gatsby-transformer-sharp": "2.5.0",
     "graphql": "14.6.0",
@@ -53,10 +53,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.0.0",
-    "react-is": "^16.13.1",
+    "react-is": "16.13.1",
     "react-typography": "0.16.19",
-    "styled-components": "^5.1.0",
-    "ts-node": "^8.9.1",
+    "styled-components": "5.1.0",
+    "ts-node": "8.9.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typescript": "3.8.3",
@@ -68,7 +68,7 @@
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
     "@types/react-helmet": "5.0.15",
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "5.1.0",
     "@types/vfile-message": "2.0.0",
     "prettier": "2.0.5"
   },
