--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "@types/react-helmet": "5.0.15",
     "@types/styled-components": "5.1.0",
     "@types/vfile-message": "2.0.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.2",
     "prettier": "2.0.5"
   },
   "private": true
