--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "@types/vfile-message": "2.0.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "prettier-package-json": "2.1.3"
   },
   "private": true,
   "husky": {
