--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
     "@types/react-helmet": "5.0.15",
     "@types/styled-components": "5.1.0",
     "@types/vfile-message": "2.0.0",
+    "eslint": "6.8.0",
+    "eslint-loader": "4.0.2",
+    "gatsby-plugin-eslint": "2.0.8",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.5",
