--- a/package.json
+++ b/package.json
@@ -69,7 +69,11 @@
     "@types/styled-components": "5.1.0",
     "@types/vfile-message": "2.0.0",
     "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
     "eslint-loader": "4.0.2",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.19.0",
     "gatsby-plugin-eslint": "2.0.8",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
