--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
+    "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx,.css './src/**'",
     "serve": "gatsby serve",
     "start": "npm run develop",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
@@ -89,11 +90,14 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "yarn type-check && lint-staged"
     }
   },
   "lint-staged": {
-    "*.{js,jsx,json,ts,tsx,css,md}": [
+    "*.{js,jsx,ts,tsx,css,md}": [
+      "eslint --fix --ignore-pattern '!.eslintrc.js'"
+    ],
+    "*.json": [
       "prettier --write"
     ],
     "package.json": [
