--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "typography-theme-wordpress-2016": "0.16.19"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "7.9.0",
+    "@types/jest": "25.2.1",
     "@types/node": "13.13.5",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.7",
@@ -71,6 +73,8 @@
     "@types/vfile-message": "2.0.0",
     "@typescript-eslint/eslint-plugin": "2.31.0",
     "@typescript-eslint/parser": "2.31.0",
+    "babel-jest": "26.0.1",
+    "babel-preset-gatsby": "0.4.1",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-prettier": "6.11.0",
@@ -82,9 +86,12 @@
     "eslint-plugin-react": "7.19.0",
     "gatsby-plugin-eslint": "2.0.8",
     "husky": "4.2.5",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "26.0.1",
     "lint-staged": "10.2.2",
     "prettier": "2.0.5",
-    "prettier-package-json": "2.1.3"
+    "prettier-package-json": "2.1.3",
+    "react-test-renderer": "16.13.1"
   },
   "keywords": [
     "gatsby"
