--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,11 @@
     "strict": false
   },
   "include": ["src/**/*"],
-  "exclude": ["./node_modules", "./public", "./.cache", "./@types"]
+  "exclude": [
+    "**/node_modules",
+    "./public",
+    "./.cache",
+    "./@types",
+    "**/__tests__"
+  ]
 }
