--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.9.0",
+    "@testing-library/jest-dom": "5.7.0",
+    "@testing-library/react": "10.0.4",
     "@types/jest": "25.2.1",
     "@types/node": "13.13.5",
     "@types/react": "16.9.34",
