--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.20.2",
     "eslint-plugin-jest": "23.9.0",
+    "eslint-plugin-jest-dom": "2.1.0",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
