--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "jest --colors",
     "test:coverage": "jest --coverage",
     "test:updateSnapshot": "jest --updateSnapshot",
-    "type-check": "tsc --noEmit --pretty"
+    "type-check": "tsc --noEmit --pretty",
+    "postinstall": "husky install"
   },
   "dependencies": {
     "babel-plugin-styled-components": "1.12.0",
@@ -92,7 +93,7 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-testing-library": "3.10.2",
     "gatsby-plugin-eslint": "2.0.8",
-    "husky": "4.3.8",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
