--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gatsby-transformer-sharp": "2.12.1",
     "graphql": "15.8.0",
     "prismjs": "1.28.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
